[Feature #160039417] Design UI for all questions

--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 
 	<!-- Container -->
 	<div class="container">
-		<form class="form" action="index.html">
+		<form class="form" action="questions.html">
 			<h2>Login Here</h2><hr>
 			
 			<label><b>Enter Username:</b></label><br>
@@ -28,7 +28,7 @@
 			<label><b>Enter Password:</b></label><br>
 			<input type="password" name="password"><br>
 			<p><b>Don't Have Account? <a href="register.html">Register Here</a></b></p>
-			<button>Login</button>
+			<p align="center"><a href="questions.html"><button>Login</button></a></p>	
 		</form>		
 	</div>
 	
