[feature] Create UI for modifying question

--- a/question.html
+++ b/question.html
@@ -28,6 +28,7 @@
 			<i>12 Aug, 2018</i>
 			<p>StackOverflow-lite​ is a platform where people can ask questions.StackOverflow-lite​ is a platform where people can ask questions and provide responses.StackOverflow-lite​ is a platform where people can ask questions and provide StackOverflow-lite​ is a platform where people can ask questions.StackOverflow-lite​ is a platform where people can ask questions and provide responses.StackOverflow-lite​ is a platform where people can ask questions and provide.<br> StackOverflow-lite​ is a platform where people can ask questions.StackOverflow-lite​ is a platform where people can ask questions and provide responses.StackOverflow-lite​ is a platform where people can ask questions and provide StackOverflow-lite​ is a platform where people can ask questions.StackOverflow-lite​ is a platform where people can ask questions and provide responses.StackOverflow-lite​ is a platform where people can ask questions and provide.<br><br>
 			StackOverflow-lite​ is a platform where people can ask questions.StackOverflow-lite​ is a platform where people can ask questions and provide responses.StackOverflow-lite​ is a platform where people can ask questions and provide StackOverflow-lite​ is a platform where people can ask questions.StackOverflow-lite​ is a platform where people can ask questions and provide responses.StackOverflow-lite​ is a platform where people can ask questions and provide </a></p>
+			<p><a href="editqn.html"><button class="btn">Edit</button></a></p>
 			
 		</div>
 	</div>
