[Chore] Add answer field

--- a/question.html
+++ b/question.html
@@ -29,6 +29,13 @@
 			<p>StackOverflow-lite​ is a platform where people can ask questions.StackOverflow-lite​ is a platform where people can ask questions and provide responses.StackOverflow-lite​ is a platform where people can ask questions and provide StackOverflow-lite​ is a platform where people can ask questions.StackOverflow-lite​ is a platform where people can ask questions and provide responses.StackOverflow-lite​ is a platform where people can ask questions and provide.<br> StackOverflow-lite​ is a platform where people can ask questions.StackOverflow-lite​ is a platform where people can ask questions and provide responses.StackOverflow-lite​ is a platform where people can ask questions and provide StackOverflow-lite​ is a platform where people can ask questions.StackOverflow-lite​ is a platform where people can ask questions and provide responses.StackOverflow-lite​ is a platform where people can ask questions and provide.<br><br>
 			StackOverflow-lite​ is a platform where people can ask questions.StackOverflow-lite​ is a platform where people can ask questions and provide responses.StackOverflow-lite​ is a platform where people can ask questions and provide StackOverflow-lite​ is a platform where people can ask questions.StackOverflow-lite​ is a platform where people can ask questions and provide responses.StackOverflow-lite​ is a platform where people can ask questions and provide </a></p>
 			<p><a href="editqn.html"><button class="btn">Edit</button></a></p>
+			<form class="form">
+				<h4>Answer</h4>
+			<hr>
+				<label><b>body:</b></label><br>
+			   <textarea cols="75" rows="10"></textarea><br>
+				
+			</form>
 			
 		</div>
 	</div>
