--- a/editqn.html
+++ b/editqn.html
@@ -29,7 +29,7 @@
 			<input type="text" name="text" placeholder="Enter title..."><br>
 			<label><b>Content:</b></label><br>
 			<textarea cols="75" rows="10"></textarea><br>
-			<button type="button">Create</button>			
+			<button type="button">Update</button>			
 			
 		</form>
 	</div>
