--- a/register.html
+++ b/register.html
@@ -20,6 +20,7 @@
 
 	<!-- Container -->
 	<div class="container">
+		<!-- Form -->
 		<form class="form">
 			<h2>Register Here</h2><hr>
 			<label><b>First Name:</b></label><br>
@@ -36,7 +37,8 @@
 			<input type="text" name="name">
 			<p><b>Have Account?<a href="login.html">Login Here</a></b></p>
 			<a href="login.html"><button>Register</button></a>
-		</form>		
+		</form>
+		<!-- End form -->
 	</div>
 	
 	<hr>
