[Chore] Add answer field

--- a/question.html
+++ b/question.html
@@ -32,9 +32,8 @@
 			<form class="form">
 				<h4>Answer</h4>
 			<hr>
-				<label><b>body:</b></label><br>
 			   <textarea cols="75" rows="10"></textarea><br>
-				
+			   <button>Submit</button>				
 			</form>
 			
 		</div>
